	  directory that ONLY contains Kconfig.  NxWidgets does not live in
	  either the nuttx/ or the apps/ source trees.  This kludge makes it
	  possible to configure NxWidgets/NxWM without too much trouble (with
	  the tradeoff being a kind ugly structure and some maintenance issues).
	* apps/examples/Make.defs: Missing support for apps/examples/watchdog.
	* apps/NxWidgets/Kconfig:  Add option to turn on the memory monitor
	  feature of the NxWidgets/NxWM unit tests.

6.23 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* vsn: Moved all NSH commands from vsn/ to system/.  Deleted the vsn/
	  directory.
	* Makefile:  Change order of includes when CONFIG_NEWCONFIG=y.  In
	  that case, namedapp must be included first so that the namedapp
	  context is established first.  If the namedapp context is established
	  later, it will overwrite any existing namedapp_list.h and nameapp_proto.h
	  files.
	* CONFIG_EXAMPLES_*: To make things consistent, changed all occurrences
	  of CONFIG_EXAMPLE_* to CONFIG_EXAMPLES_*.
	* Kconfig:  Fleshed out apps/examples/adc/Kconfig and apps/examples/wget/Kconfig.
	  There are still a LOT of empty, stub Kconfig files.
	* Kconfig:  Fleshed out apps/examples/buttons/Kconfig. There are still a LOT
	  of empty, stub Kconfig files.
	* apps/netutils/webserver/httpd.c:  Fix a bug that I introduced in
	  recent check-ins (Darcy Gong).
	* apps/netutils/webclient/webclient.c:  Fix another but that I introduced
	  when I was trying to add correct handling for loss of connection (Darcy Gong)
	* apps/nshlib/nsh_telnetd.c:  Add support for login to Telnet session via
	  username and password (Darcy Gong).
	* apps/netutils/resolv/resolv.c (and files using the DNS resolver): Various
	  DNS address resolution improvements from Darcy Gong.
	* apps/nshlib/nsh_netcmds.c:  The ping command now passes a maximum round
	  trip time to uip_icmpping().  This allows pinging of hosts on complex
	  networks where the ICMP ECHO round trip time may exceed the ping interval.